# cheers

./: .dockerignore  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  MOBILE_ACCESS.md  README.md  TODO.md  TROUBLESHOOTING.md  db.py  dev-restart.sh  dev-start.sh  dev-status.sh  dev-stop.sh  docker-compose.yml  firewall-setup.sh  game.html  game2 1.html  game_logic.py  main.py  pump_controller.py  requirements.txt
.claude/: settings.local.json
PartyGame/: game.html  index.html  mode.html  script.js  setup.html  simple-test.html  style.css  test.html  wheel-debug.html
backend/: database.py  db.py  game_logic.py  main.py  pyproject.toml  requirement.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  game.py  player.py
backend/app/routers/: __init__.py  game.py  questions.py
backend/app/schemas/: __init__.py  drink.py  game.py  player.py
backend/app/services/: dice_engine.py
backend/data/: questions_lsa.json  questions_truth.json
nginx/: nginx.conf
