[project]
name = "cheers-backend"
version = "2.0.0"
description = "醉加損友 - 互動式調酒遊戲後端"
authors = [{name = "Cheers Team"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
